# bjs

./: README.md  pyproject.toml
bjs/: hooks.py  modules.txt
bjs/bjs_raw_pet_food/custom/: item.json  packed_item.json  sales_order.json  sales_order_item.json
bjs/bjs_raw_pet_food/doctype/sales_order_shipment/: sales_order_shipment.json  sales_order_shipment.py
bjs/bjs_raw_pet_food/doctype/shipping_carrier/: shipping_carrier.js  shipping_carrier.json  shipping_carrier.py  test_shipping_carrier.py
bjs/bjs_raw_pet_food/doctype/shipping_carrier_rule/: shipping_carrier_rule.json  shipping_carrier_rule.py
bjs/bjs_raw_pet_food/doctype/shipping_package/: shipping_package.js  shipping_package.json  shipping_package.py  test_shipping_package.py
bjs/bjs_raw_pet_food/doctype/shipping_package_capacity/: shipping_package_capacity.js  shipping_package_capacity.json  shipping_package_capacity.py  test_shipping_package_capacity.py
bjs/bjs_raw_pet_food/doctype/shipping_package_capacity_quantity/: shipping_package_capacity_quantity.js  shipping_package_capacity_quantity.json  shipping_package_capacity_quantity.py  test_shipping_package_capacity_quantity.py
bjs/bjs_raw_pet_food/doctype/shipping_package_item_capacity/: shipping_package_item_capacity.json  shipping_package_item_capacity.py
bjs/bjs_raw_pet_food/doctype/shipping_service/: shipping_service.js  shipping_service.json  shipping_service.py  test_shipping_service.py
bjs/bjs_raw_pet_food/doctype/shipping_zone_mapping/: shipping_zone_mapping.js  shipping_zone_mapping.json  (+2 more)
bjs/bjs_raw_pet_food/hooks/: sales_order.py
(+3 files in other folders)
